--- a/api/package.json
+++ b/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "airbnb-api",
+  "name": "wandernest-api",
   "version": "1.0.0",
   "description": "API for airbnb clone app",
   "main": "index.js",
@@ -10,7 +10,7 @@
     "api",
     "backend"
   ],
-  "author": "rahul4019",
+  "author": "jayashree",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -22,6 +22,7 @@
     "express": "^4.18.2",
     "image-downloader": "^4.3.0",
     "jsonwebtoken": "^9.0.0",
+    "mongodb": "^7.0.0",
     "mongoose": "^6.9.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0"
